--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -13,7 +13,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/fakultasList"
             android:layout_width="match_parent"
-            android:layout_height="122dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
@@ -34,11 +34,13 @@
 
                 <TextView
                     android:id="@+id/listFakultas"
-                    android:layout_width="189dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="16dp"
-                    android:gravity="center_horizontal|center_vertical"
+                    android:gravity="center"
                     android:text="@string/app_name"
+                    android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
